      A new interface has been added to the Tracer to accept a String as
      input and writes the String to the trace file.

      (ex.)
      You can issue the following method call:
         Tracer::trace(TRC_CONFIG, Tracer::LEVEL2, "Operation Failed.");

      or use the following new macro:
         PEG_TRACE_STRING(TRC_CONFIG, Tracer::LEVEL2, "Operation Failed.");
    
25.  (Ramnath Ravindran - Compaq) 8 March 2002 - added IPCTru64.h and modified
	several files so that Pegasus could build and run on Tru64 unix.  Added
	one macro in ConfigUnix and ConfigWindows (PEGASUS_OR_IOS_BINARY) in 
	the case where std::ios::binary is present with a bitwise OR operator.
	This macro only works when the std::ios::binary is NOT the first 
	operator to be "OR"ed.

-------------------------------------------------------------------
Version 1.06 working towards 1.1 Started 13 December 2001

1. Merged back to Main branch.  All general development will be in main branch 
       in the future with releases in side branches. Special side developments
       may temporarily be in side branches.
       Changed cimversion to 1.06.  We will do 1.1 based on functionality.
       
2. (Karl) 18 December 2001 - Added new directory repositories where repository 
	implementations will be kept to separate them from the 
	repository interface defintion. Initial implementation is genericfile
	which is the current file based repository.
	
	Added new build variable RMREPOSITORY which is a generic MAKE command
	to remove an existing repository.  It simply substitutes for the RMDIRHIER
	command at this point but we will make this a generic part of system
	in the future.

3. (Roger Kumpf - HP) 18 Dec 2001 - Updated the CIMOperationRequestDecoder
   to check that all required parameters for intrinsic methods are
   present.  If a required parameter is missing, a CIM_ERR_INVALID_PARAMETER
   exception is thrown.  Also added checks for duplicate parameters in the