@@ -23,6 +23,7 @@
 // Author: Mike Brasher (mbrasher@bmc.com)
 //
 // Modified By:
+//         Ramnath Ravindran (Ramnath.Ravindran@compaq.com)
 //
 //%/////////////////////////////////////////////////////////////////////////////
 
@@ -150,7 +151,12 @@ inline Boolean operator!=(CIMType::Tag x, CIMType y)
 
 inline Boolean operator==(CIMType::Tag x, CIMType::Tag y)
 {
+	//not supported on Tru64
 	return x == y;
+
+#ifdef PEGASUS_PLATFORM_TRU64_ALPHA_DECCXX
+	return operator==(x, y);
+#endif
 }
 
 // Returns a string representation of the given type. The string
