@@ -23,6 +23,7 @@
 // Author: Mike Brasher (mbrasher@bmc.com)
 //
 // Modified By:
+//         Ramnath Ravindran(Ramnath.Ravindran@compaq.com)
 //
 //%/////////////////////////////////////////////////////////////////////////////
 
@@ -238,7 +239,17 @@ Boolean FileSystem::openNoCase(PEGASUS_STD(ifstream)& is, const String& path)
     ArrayDestroyer<char> p(_clonePath(path));
 
     is.open(p.getPointer() PEGASUS_IOS_BINARY);
-    return is != 0;
+    
+	//not supported on Tru64
+	return is != 0;
+
+#ifdef PEGASUS_PLATFORM_TRU64_ALPHA_DECCXX
+	if (is.good() != 0)
+		return true;
+	else
+		return false;
+#endif
+	
 }
 
 Boolean FileSystem::isDirectory(const String& path)
