@@ -265,12 +265,21 @@ will be deleted.
       or use the following new macro:
          PEG_TRACE_STRING(TRC_CONFIG, Tracer::LEVEL2, "Operation Failed.");
     
-25.  (Ramnath Ravindran - Compaq) 8 March 2002 - added IPCTru64.h and modified
+25.  (Ramnath Ravindran - Compaq) 11 March 2002 - added IPCTru64.h and modified
 	several files so that Pegasus could build and run on Tru64 unix.  Added
 	one macro in ConfigUnix and ConfigWindows (PEGASUS_OR_IOS_BINARY) in 
 	the case where std::ios::binary is present with a bitwise OR operator.
 	This macro only works when the std::ios::binary is NOT the first 
 	operator to be "OR"ed.
+
+26.  (Ramnath Ravindran - Compaq) 12 March 2002 - modified more files so that 
+	Pegasus could build and run on Tru64 unix. Finished replacing instances
+	of ios::binary with the macros PEGASUS_IOS_BINARY and 
+	PEGASUS_OR_IOS_BINARY. Also modified some code that dealt with file 
+	streams.  Tru64 does not support the use of the " != " operator on a
+	fstream object.  Instances of such were either modified or an ifdef 
+	block detecting a build on Tru64 was used.  Added cstdarg and ctime in
+	pegasus/src/stdcxx/cwrappers/ directory.
 
 -------------------------------------------------------------------
 Version 1.06 working towards 1.1 Started 13 December 2001
